@@ -51,6 +51,7 @@ bin/android         tools/android
 # sdk.git Ant templates for project build files
 sdk/templates/build.template        tools/lib/build.template
 sdk/templates/build.export.template tools/lib/build.export.template
+sdk/files/proguard.cfg              tools/lib/proguard.cfg
 
 # Ant Build Rules
 sdk/files/ant                       tools/ant
